# deno-openai-rust-wasm-sample

./: .env.local.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  dockerfile.dev  makefile  tree.sh
aimaid/: assistants.ts  fetch.ts  input.txt  openai.ts  operation_file.ts  rag_test.ts
cosine-similarity/: Cargo.toml
cosine-similarity/src/: lib.rs
deno-sample/: .gitignore  assistants.ts  concat-source-py.md  concat_source_code_py.ts  concat_source_code_py_main.ts  concat_source_code_py_test.ts  connect_sqlite.ts  deno.json  input.txt  makefile  memo.md  openai.ts  operation_file.ts  output.md  prompt.ts  rag_sample.ts  sample-rocks-db.ts  single_chat.ts  team_develop_init.ts  team_develop_run_leader.ts  team_developper_init.txt
deno-sample/todo-app/: package.json
deno-sample/todo-app/src/: App.vue
docker/: dockerfile.dev
rag-ai-tutorial/: README.md  package-lock.json  package.json  wrangler.toml
rag-ai-tutorial/src/: index.js
src/: main.rs
src/domain/: open_ai.rs
src/domain/open_ai/: cast.rs  key.rs  log.rs  maid.rs
src/domain/voice_bli_nekoduka/: data.rs
src/presentation/: cli.rs
tools/sqlite/migration/: 0-20230926-create-chat-table.sql
