[package]
name = "aimaid"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aimaid"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1", features = ["full"] }
